test/assets/invalid/signatures/superfluous-middle.hs
a :: [Char] -> Int -> Char
a = head